# mint

./: CMakeLists.txt  all_tests.c  mint.c  mint_all_tests.c
include/: mint_lexer.h  mint_token.h
src/: mint_lexer.c  mint_token.c
tests/: 002_comments.mint  003_numbers.mint  004_identifiers.mint  005_all_token_types.mint  005_symbols.mint  006_dot_comma.mint  007_complex_numbers.mint  008_complex_expressions.mint  009_language_constructs.mint  010_vec3.mint  011_edge_cases.mint  012_comprehensive.mint
